--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.99.7",
     "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.162.0",
     "git": "^0.1.5",
+    "leva": "^0.9.35",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
