--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@react-three/fiber": "^8.15.19",
     "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.162.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "git": "^0.1.5",
     "leva": "^0.9.35",
+    "lucide-react": "^0.402.0",
     "next": "14.1.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0",
     "zustand": "^4.5.2"
   },
