--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
+    "workbox-webpack-plugin": "^7.1.0",
     "worker-loader": "^3.0.8"
   }
 }
